메이플스토리 영역 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="./common/css/reset.css" />
+    <link type="text/css" rel="stylesheet" href="./common/css/maplestory_font.css" />
     <link type="text/css" rel="stylesheet" href="./common/css/style.css" />
     <link type="text/css" rel="stylesheet" href="./common/js/plug-in/aos.css" /><!-- AOS -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -133,6 +134,24 @@
 
             <div class="contents contents_04" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
+                    <div class="maplestory_wedding">
+                        <div class="maplestory_wedding_img">
+                            <img src="./common/image/maplestory.png">
+                        </div>
+                        <div class="maple_baby jongmin">
+                            <img src="./common/image/maplestory2_right.png">
+                            <p>우리 게임속에서 결혼했는데<br>현실결혼도 하네!</p>
+                        </div>
+                        <div class="maple_baby hyeran">
+                            <p>ㅋㅋㅋ 갓생살자!</p>
+                            <img src="./common/image/maplestory1.png">
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /contents_04  -->
+
+            <div class="contents contents_05" data-aos="fade-up" data-aos-delay="500">
+                <div class="inner">
                     <h6>마음 전하실 곳</h6>
                     <div class="account_wrapper">
                         <div class="account">
@@ -183,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- /contents_04  -->
+            </div><!-- /contents_05  -->
 
             <footer>
                 <ul>
@@ -224,7 +243,7 @@
 
     </div>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
+
     <script type="text/javascript" src="./common/js/default.js"></script>
     <script type="text/javascript" src="./common/js/plug-in/aos.js"></script>
     <script>
