갤러리 업데이트

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="./common/js/plug-in/aos.css" /><!-- AOS -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <title>2023.11.11 김종민·윤혜란</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
                         <img src="./common/image/main_date.png" alt="2023.11.11">
                     </div>
                     <div class="main_image">
-                        <img src="./common/image/main_image.png">
+                        <img src="./common/image/wedding_1.png">
                     </div>
                 </div>
             </div><!-- /main  -->
@@ -42,22 +42,249 @@
             <div class="contents contents_02" data-aos="fade-up" data-aos-delay="500">
                 <div class="inner">
                     <h6>갤러리</h6>
-                    <div class="slider">
-                        <div class="slider-for">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                        </div>
-                        <div class="slider-nav">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                            <img src="./common/image/main_image.png">
-                        </div>
-                    </div>
+                    <div class="image-gallery">
+                        <div class="image-gallery-items">
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_1.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_1.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_2.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_2.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_3.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_3.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_4.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_4.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_5.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_5.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_6.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_6.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_7.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_7.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_8.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_8.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_9.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_9.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_10.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_10.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_11.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_11.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_12.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_12.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_13.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_13.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_14.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_14.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_15.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_15.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_16.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_16.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_17.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_17.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_18.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_18.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_19.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_19.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_20.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_20.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_21.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_21.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_22.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_22.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_23.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_23.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                            <div class="gallery-item">
+                                <div>
+                                    <a href="https://yoonena.github.io/wedding/common/image/wedding_24.png" class="thumbnail">
+                                        <span>
+                                            <img src="./common/image/wedding_24.png">
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div><!-- /image-gallery-items  -->
+                    </div><!-- /image-gallery  -->
                 </div>
             </div><!-- /contents_02  -->
 
